--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,11 @@
 			<version>5.2.10.Final</version>
 			<scope>provided</scope>
 		</dependency>
+		<dependency>
+			<groupId>javax.ejb</groupId>
+			<artifactId>javax.ejb-api</artifactId>
+			<version>3.2</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<finalName>mgd_java_api</finalName>
