--- a/Makefile.net
+++ b/Makefile.net
@@ -1,5 +1,5 @@
 #
-# for bheidevapp01 : must use additional network parameters
+# for bheidev01 : must use additional network parameters
 #
 # -Djava.net.preferIPv4Stack=true 
 # -Djava.net.preferIPv4Addresses=true
