Code for getting saving working to the database

--- a/pom.xml
+++ b/pom.xml
@@ -96,6 +96,11 @@
 			<artifactId>commons-collections4</artifactId>
 			<version>4.1</version>
 		</dependency>
+		<dependency>
+			<groupId>org.reflections</groupId>
+			<artifactId>reflections</artifactId>
+			<version>0.9.10</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<finalName>mgd_java_api</finalName>
