--- a/pom.xml
+++ b/pom.xml
@@ -108,6 +108,12 @@
 			<version>1.0</version>
 			<systemPath>${basedir}/src/lib/core.jar</systemPath>
 		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.12</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 	<build>
 		<finalName>mgd_java_api</finalName>
