--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,10 @@
 		</dependency>
 		<dependency>
 			<groupId>org.wildfly.swarm</groupId>
+			<artifactId>jaxrs-multipart</artifactId>
+		</dependency>		
+		<dependency>
+			<groupId>org.wildfly.swarm</groupId>
 			<artifactId>cdi</artifactId>
 		</dependency>
 		<dependency>
@@ -96,6 +100,11 @@
 			<artifactId>commons-collections4</artifactId>
 			<version>4.1</version>
 		</dependency>
+ 		<dependency>
+			<groupId>commons-io</groupId>
+  			<artifactId>commons-io</artifactId>
+  			<version>2.6</version>
+ 		</dependency>	
 		<dependency>
 			<groupId>org.reflections</groupId>
 			<artifactId>reflections</artifactId>
